Improved the readability, changed some colors, and fixed some logic errors.

--- a/static/customer/customer_stylesheet.css
+++ b/static/customer/customer_stylesheet.css
@@ -13,7 +13,7 @@ body {
     
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: dodgerblue;
+  background-color: none;
   padding: 10px;
 }
 
@@ -40,13 +40,15 @@ body {
   background-color: #f1f1f1;
   border: 5px solid black;
 
-  margin: 5px;
-  padding: 5px;
-
   transition: 0.2s;
 }
-/* Styling for the different cart tools, such as clearing the cart. */
 
+.cart p {
+
+  font-size: 20px;
+}
+
+/* Styling for the different cart tools, such as clearing the cart. */
 .cart .cart_operations li {
 
   list-style-type: none;
@@ -65,6 +67,8 @@ body {
 .cart .cart_operations li:last-child {
 
   border-right: none;
+  
+  padding-right: 10px;
 }
 
 .cart .cart_operations li:hover {
